+fixed spacing on "or" in accounts

--- a/client/src/component/nav/nav.module.css
+++ b/client/src/component/nav/nav.module.css
@@ -62,3 +62,9 @@
     text-decoration: underline;
     /* color:red; */
 }
+
+.or{
+    display: inline-block;
+    margin-left: 3px;
+    margin-right: 3px;
+}
